// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleFull renders a 'error' message when an error happen during load 1`] = `"<article class=\\"ArticleFull\\">An error happened, please try again later.</article>"`;

exports[`ArticleFull renders a 'not found' error when the article doesn't exist 1`] = `"<article class=\\"ArticleFull\\">This article doesn't exist.</article>"`;

exports[`ArticleFull renders the article when it exists and user is logged in 1`] = `
"<article class=\\"ArticleFull\\">
  <h2 class=\\"TitleLevel2 ArticleFull__title\\">title</h2>
  <div class=\\"ArticleFull__author_name\\">by username</div>
  <div class=\\"ArticleFull__editionLink\\"><a class=\\"AppLink AppLink--blue\\" href=\\"/article/undefined/edit\\">Edit</a></div>
  <div class=\\"ArticleFull__content\\">content</div>
</article>"
`;

exports[`ArticleFull renders the article when it exists and user is not logged in 1`] = `
"<article class=\\"ArticleFull\\">
  <h2 class=\\"TitleLevel2 ArticleFull__title\\">title</h2>
  <div class=\\"ArticleFull__author_name\\">by username</div>
  <div class=\\"ArticleFull__content\\">content</div>
</article>"
`;
